--- a/Evangelizacion/Evangelizacion/Views/LectioDivinaPage.xaml
+++ b/Evangelizacion/Evangelizacion/Views/LectioDivinaPage.xaml
@@ -21,42 +21,20 @@
                Grid.Row="2"
                Grid.Column="1"
                Padding="40"></Label>
-        <Button Grid.Row="2"
-                Grid.Column="1"
-                Text="Leer Lecturas"
-                TextColor="White"
-                BackgroundColor="#EAB543"
-                CornerRadius="30"
-                FontSize="15"
-                TranslationX="-10"
-                TextTransform="None"></Button>
-        <Grid ColumnDefinitions="*,*"
-              RowDefinitions=".30*,.50*,.20*">
-            <ImageButton Source="logoinicio"
-                         BackgroundColor="Transparent"
-                         ScaleX="1.1"
-                         ScaleY="1.1"
-                         Grid.Row="1"
-                         TranslationX="-100"></ImageButton>
-            <Label Text="Evangelio Diario"
-                   TextColor="White"
-                   Grid.Row="2"
-                   Grid.Column="1"
-                   FontSize="25"></Label>
-            <Label Text="LITURGIA - 03 DE FEBRERO DE 2023"
-                   TextColor="White"
-                   Grid.Row="2"
-                   Grid.Column="1"
-                   Padding="40"></Label>
-            <Button Grid.Row="2"
-                    Grid.Column="1"
-                    Text="Leer Lecturas"
+        <Grid Grid.Row="2"
+              Grid.Column="1"
+              ColumnDefinitions=".2*,.1*"
+              RowDefinitions=".1*,.3*"
+              VerticalOptions="End">
+            <Button Text="Leer Lecturas"
                     TextColor="White"
                     BackgroundColor="#EAB543"
                     CornerRadius="30"
-                    FontSize="15"
-                    TranslationX="-10"
-                    TextTransform="None"></Button>
+                    FontSize="12"
+                    TranslationX="40"
+                    TranslationY="90"
+                    TextTransform="None"
+                    VerticalOptions="End"></Button>
         </Grid>
     </Grid>
 </ContentPage>
